--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
     <h1 style="text-align: center;">Financial Tracker</h1>
 
-    <div style="text-align: center; width: 300px; border: 1px solid #ccc; padding: 20px; border-radius: 10px;">
+    <div style="text-align: flex-start; width: 300px; border: 1px solid #ccc; padding: 20px; border-radius: 10px;">
         <h2>Add a Transaction</h2>
         <form id="transaction-form" style="display: flex; flex-direction: column; align-items: center;">
             <label for="type">Type:</label>
